Добавить секцию монетизации и тарифов
Добавлена секция с тарифами и описанием услуг SkillSwap PRO.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,60 @@
       </div>
     </section>
   </main>
+  <!-- СЕКЦИЯ МОНЕТИЗАЦИИ / ТАРИФЫ -->
+    <section class="block pricing-section">
+      <h2>6. Монетизация SkillSwap PRO</h2>
+      <p style="font-size:13px; color:#cfd3ff;">
+        SkillSwap PRO использует модель <strong>Freemium + Premium</strong>. 
+        Бесплатный доступ остаётся для всех, а расширенные функции доступны в платных тарифах.
+      </p>
+
+      <div class="pricing-grid">
+        <!-- FREE -->
+        <div class="pricing-card">
+          <div class="pricing-title">FREE</div>
+          <div class="pricing-price">0 ₸ / месяц</div>
+          <div class="pricing-desc">Базовый бесплатный доступ для каждого ученика.</div>
+          <ul class="pricing-list">
+            <li>Создание профиля</li>
+            <li>До 3 совпадений в неделю</li>
+            <li>Ограниченный чат (5 сообщений)</li>
+            <li>Стандартный поиск пользователей</li>
+          </ul>
+          <button class="pricing-btn" type="button">Используется</button>
+        </div>
+
+        <!-- PLUS -->
+        <div class="pricing-card popular">
+          <div class="pricing-title">SkillSwap PLUS</div>
+          <div class="pricing-price">990 ₸ / месяц</div>
+          <div class="pricing-desc">Премиум-доступ для активных школьников и студентов.</div>
+          <ul class="pricing-list">
+            <li>Неограниченные совпадения</li>
+            <li>Полный чат без ограничений</li>
+            <li>Приоритет в выдаче рекомендаций</li>
+            <li>Скрытый режим профиля</li>
+            <li>Без рекламы</li>
+          </ul>
+          <button class="pricing-btn" type="button">Подключить</button>
+        </div>
+
+        <!-- SCHOOL PRO -->
+        <div class="pricing-card">
+          <div class="pricing-title">School PRO</div>
+          <div class="pricing-price">49 000 ₸ / месяц</div>
+          <div class="pricing-desc">Тариф для школ, лицеев и колледжей.</div>
+          <ul class="pricing-list">
+            <li>Единый аккаунт для всей школы</li>
+            <li>Панель для учителя и администратора</li>
+            <li>Статистика активности учеников</li>
+            <li>Отчёты и аналитика</li>
+            <li>Брендирование под школу</li>
+          </ul>
+          <button class="pricing-btn" type="button">Для администрации</button>
+        </div>
+      </div>
+    </section>
 
   <footer>
     <small>SkillSwap PRO — учебный стартап-проект</small>
